Fix play / pause icon on IE9
[#59563876]

--- a/src/sass/lab/_interactive-components.sass
+++ b/src/sass/lab/_interactive-components.sass
@@ -468,19 +468,19 @@
       position: relative
       width: 6.4em
       white-space: nowrap
+      text-align: left
       i
-        margin-left: -4.5em
+        margin-left: 0.55em
       .time-display
         display: inline-block
         position: absolute
         right: 0.5em
         bottom: 0.17em
-        text-align: right
         vertical-align: middle
         width: 5em
         color: #939598
         background: #e6e7e8
-        font-weight: bold
+        text-align: right
         border: 1px solid #bbb
         border-bottom-color: #ccc
         padding: 0.1em 0.2em 0 0
